--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
   <body>
     <main>
       <div class="container">
-        <img
-          class="main-img"
-          src="images/image-equilibrium.jpg"
-          alt="image of equilibrium"
-        />
+        <div class="img-container">
+          <img
+            class="main-img"
+            src="images/image-equilibrium.jpg"
+            alt="image of equilibrium"
+          />
+          <div class="overlay">
+            <img class="overlay-img" src="images/icon-view.svg" alt="" />
+          </div>
+        </div>
         <h1 class="heading">Equilibrium #3429</h1>
         <p class="text">
           Our Equilibrium collection promotes balance and calm.
@@ -48,9 +53,8 @@
 
     <footer>
       <div class="attribution">
-        Challenge by<a
-          href="https://www.frontendmentor.io?ref=challenge"
-          target="_blank"
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by <a href="#">tomeklucz</a>.
       </div>
