--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <link
       rel="icon"
@@ -12,9 +11,8 @@
       href="./images/favicon-32x32.png"
     />
 
-    <title>Frontend Mentor | NFT preview card component</title>
+    <title>NFT preview card component</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -50,14 +48,5 @@
         </div>
       </div>
     </main>
-
-    <footer>
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">tomeklucz</a>.
-      </div>
-    </footer>
   </body>
 </html>
